# E-Health-Consultation-Platfrom

./: .gitignore  README.md  SETUP_GUIDE.md
backend-fastapi/: .env.example  blockchain_utils.py  deploy.py  main.py  models.py  pyproject.toml  security.py  test_blockchain.py
backend-fastapi/routes/: appointments.py  prescriptions.py  users.py
blockchain/contracts/: HealthData.sol
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  constants.ts
frontend/src/components/: AccessControlPanel.tsx  AccessLogViewer.tsx  WalletConnect.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: doctorDashboard.tsx  patientDashboard.tsx
